# c-compiler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  compiler_driver.py  lexer.py  pyproject.toml
.github/workflows/: ci-commit-changelog.yaml  ci-unittest.yaml
ast/: tree.py  tree_node.py
compiler/: compiler_driver.py  lexer.py
compiler/assembly_generation/: assembly_ast.py  assembly_generation.py  ast.py  generator.py
compiler/ast/: tree.py  tree_node.py
compiler/ast/parser/: ast.py  parsers.py
compiler/code_emission/: code_emission.py  writer.py
compiler/lexer/: lexer.py
compiler/parser/: ast.py  parser.py  parser_ast.py  parsers.py
lib/ast/: ast.py
lib/tree/: node.py  tree.py  utils.py
tests/: test_ast.py  test_lexer.py  test_parser.py  test_parsers.py  test_tree.py
tests/ast/: tree.py
tests/compiler/lexer/: test_lexer.py
tests/compiler/parser/: test_parsers.py
tests/lexer/: lexer.py  test_lexer.py
tests/lib/tree/: tree_test.py
tests/test_samples/chapter_1/valid/: newlines.c
