[tool.poetry]
name = "c-compiler"
version = "0.1.1"
description = "A C compiler implemented in Python, following the principles and techniques outlined in 'Writing a C Compiler' by N. Sandler."
authors = [
    "Alberto Ursino <albertoursino98@gmail.com>",
    "Marco Mariotto <mari8.marco@gmail.com>",
    "Fabio Marangoni",
    "Luca Crema",
]
readme = "README.md"
packages = [{ include = "compiler" }]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
